The ui is connected to ollama and receives the replies from the designated bot (llama3.2)

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <title>Ollama Chat</title>
-    <!-- Webix CSS -->
-    <script src="https://cdn.webix.com/edge/webix.js"></script>
-    <link rel="stylesheet" href="https://cdn.webix.com/edge/fonts/webix/webix.css">
+    <!-- Webix CSS and JS from CDN -->
     <link rel="stylesheet" href="https://cdn.webix.com/edge/webix.css" />
+    <link rel="stylesheet" href="https://cdn.webix.com/edge/fonts/webix/webix.css">
     <link rel="stylesheet" href="https://cdn.webix.com/edge/webix-font/webix-icons.css">
+    <script src="https://cdn.webix.com/edge/webix.js"></script>
   
     <style>
       html, body {
@@ -18,8 +18,6 @@
     </style>
   </head>
   <body>
-    <!-- Webix JS -->
-    <script src="webix.min.js"></script>
     <!-- Our custom JS -->
     <script src="chat.js"></script>
   </body>
